--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "forwarded": "^0.2.0",
     "google-auth-library": "^8.7.0",
+    "ipaddr.js": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-check-expiration": "^1.0.5",
     "jwt-decode": "^3.1.2",
